Fixed horizontal scrolling on body and minor fix in navbar

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Raleway', sans-serif;
   position: relative;
+  overflow-x: hidden;
 }
 
 .top-header {
